Backend habits (#11)
* added new files

* files changed

* correct habit_rep

* habit complete

* user_habit: added new files
