# backend/internal/models/user_habit.go
@@ -1,0 +1,9 @@
+﻿package models
+
+type UserHabit struct {
+	ID          int    `gorm:"primaryKey" json:"id"`
+	UserID      int    `gorm:"index" json:"user_id"`
+	HabitID     int    `gorm:"index" json:"habit_id"`
+	StartDate   string `json:"start_date"`
+	CurrentPlan int    `json:"current_plan"`
+}
